Add intl package and enhance maintenance screen with error handling and empty state
- Added `intl` package as a dependency for date formatting.
- Improved the `MaintenanceScreen` to handle loading, error, and empty states more effectively.
- Refactored the `AddMaintenanceSheet` to include better validation and error handling.
- Updated the `AppDatabase` comments for clarity.
- Minor formatting adjustments in various files for consistency.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,13 @@ version: 1.0.0+1
 environment:
   sdk: ^3.10.8
 
+
 dependencies:
   flutter:
     sdk: flutter
+
+  intl: ^0.18.1   # ou la dernière version disponible
+
 
   cupertino_icons: ^1.0.8
   
