--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  intl: ^0.18.1   # ou la dernière version disponible
-
+  intl: ^0.19.0   # ou la dernière version disponible
+  http: ^1.3.0
 
   cupertino_icons: ^1.0.8
   
