Add global club settings and update terrain coordinate management
- Added `shared_preferences` dependency and created `SharedPrefsProvider` for persistent storage.
- Introduced `AppSettingsProvider` to manage global club location (latitude/longitude) used as a default for weather data.
- Added a `SettingsScreen` to allow users to configure or delete the club's global coordinates.
- Created `EditCoordsPage` and `updateTerrainProvider` to allow manual updating of individual terrain coordinates.
- Refactored `WeatherScreen` and `AddMaintenanceSheet` to fetch weather data based on the global club location rather than requiring individual terrain coordinates.
- Updated `HomeScreen` to include navigation to the new settings screen and a unified club weather view.
- Modified `main.dart` to ensure `WidgetsFlutterBinding` is initialized for plugin support.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   http: ^1.3.0
 
   cupertino_icons: ^1.0.8
-  
+  shared_preferences: ^2.3.2
   # Riverpod v2
   flutter_riverpod: ^2.6.1
   
