Implement stock validation and deduction during maintenance recording
- Removed `seed_data.dart` and `seedDataProvider` to streamline initial application state.
- Enhanced `MaintenanceNotifier` to handle stock item invalidation and integrated stock-aware insertion logic.
- Updated `AppDatabase` with `insertMaintenanceWithStockCheck`, ensuring material quantities (Manto, Sottomanto, Silice) are deducted within a transaction.
- Added validation to prevent maintenance entries if required stock levels are insufficient.
- Refined default stock items and thresholds in `_seedStockItems`.
- Cleaned up `main.dart` and repository configuration rules to reflect the removal of seeding logic.

--- a/ai/rules.gemini.yaml
+++ b/ai/rules.gemini.yaml
@@ -6,7 +6,7 @@ meta:
   repository_conventions:
     architecture: "Layers: data (database, mappers), domain (entities), infrastructure (weather), presentation (providers/screens/widgets/utils), main.dart"
     state_management: "Pattern Provider (ChangeNotifier/Provider ou Riverpod-like via dossier presentation/providers)"
-    persistence: "SQLite/Drift-like via lib/data/database/* (tables, app_database.dart, seed_data.dart)"
+    persistence: "SQLite/Drift-like via lib/data/database/* (tables, app_database.dart)"
     networking: "Uniquement via infrastructure/weather/weather_service.dart"
     exports: "CSV via lib/presentation/utils/csv_export*.dart"
     charts: "Bar chart/grouped chart via widgets/grouped_bar_chart.dart"
@@ -52,7 +52,6 @@ ground_truth_context:
   observed_files:
     - lib/data/database/tables/*
     - lib/data/database/app_database.dart
-    - lib/data/database/seed_data.dart
     - lib/data/mappers/terrain_mapper.dart
     - lib/domain/entities/{maintenance.dart,terrain.dart,weather_snapshot.dart}
     - lib/infrastructure/weather/weather_service.dart
@@ -116,7 +115,6 @@ tasks_playbook:
       - "Domain: étendre terrain.dart (nouveau champ, valeurs par défaut)."
       - "DB: créer migration dans tables + app_database.dart."
       - "Mapper: terrain_mapper.dart mis à jour."
-      - "Seed: seed_data.dart ajusté."
       - "Providers: terrain_provider.dart & dépendants (sélection, stats)."
       - "UI: screens/widgets impactés (affichage/édition)."
       - "Exports: csv_export*.dart pour inclure le champ."
