--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
-  intl: ^0.19.0   # ou la dernière version disponible
+  intl: ^0.20.2   # Updated for flutter_localizations compatibility
   http: ^1.3.0
 
   cupertino_icons: ^1.0.8
@@ -30,6 +32,7 @@ dependencies:
   crypto: ^3.0.7
   fl_chart: ^1.1.1
   google_fonts: ^8.0.2
+  table_calendar: ^3.1.3
 
 dev_dependencies:
   flutter_test:
